# foundry-workload-studio

./: .env.example  .gitignore  README.md  azure.yaml  pyproject.toml  start.sh  stop.sh
.github/workflows/: ci.yml
data/clinical/: laser_product_guide.md  maintenance_weekly.md  operational_warnings.md
data/complaints/: sample_complaints.json
data/hr/: benefits.md  employee_handbook.md  parental_leave.md  pto_policy.md
data/telemetry/: device_telemetry.json
docs/: architecture.md  demo-script.md  pilot-plan.md  security-guardrails.md  user-guide.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
infra/: README.md  main.bicep  main.bicepparam  main.json
infra/environments/: demo.bicepparam  dev.bicepparam  prod.bicepparam
infra/modules/: apim.bicep  containerapps.bicep  cosmos.bicep  foundry.bicep  keyvault.bicep  monitoring.bicep  search.bicep  storage.bicep
scripts/: __init__.py  azd-postprovision.sh  debug.py  e2e_clinical.py  e2e_complaint_triage.py  e2e_hr.py  e2e_maintenance.py  provision_foundry_agents.py  run_all_e2e.py  seed_search.py  seed_telemetry.py
src/: __init__.py
src/clinical_laser_assistant/: __init__.py  agent.py  api.py
src/common/: __init__.py  config.py  foundry_agents.py  foundry_client.py  grounded.py  models.py  retrieval.py  safety.py  telemetry.py
src/gateway/: __init__.py  api.py  azure_services.py  registry.py  status.py  tracing.py
src/hr_policy_assistant/: __init__.py  agent.py  api.py
src/maintenance_copilot/: __init__.py  agent.py  api.py  telemetry_grounding.py
src/quality_complaint_triage/: __init__.py  agent.py  api.py
tests/: conftest.py  test_clinical_laser.py  test_common.py  test_complaint_triage.py  test_e2e.py  test_hr_policy.py  test_maintenance.py
(+7 files in other folders)
